<resources>
	<string name="mobile_about">About Us</string>
	<string name="mobile_about_copyright">Copyright %1$s-%2$s %3$s. The %4$s name, associated trademarks and logos are trademarks of %3$s or related entities.</string>
	<string name="mobile_about_pp">Privacy Policy</string>
	<string name="mobile_about_privacy">%s respects the user\'s right to privacy. Read more about our:</string>
	<string name="mobile_about_tc">Terms and Conditions</string>
	<string name="mobile_about_website">Website</string>
	<string name="mobile_accept_terms_text">By proceeding, I am agreeing with both %1$s and %2$s</string>
	<string name="mobile_accept_terms_title">Accept terms</string>
	<string name="mobile_account">Account</string>
	<string name="mobile_activate_now">Activate now</string>
	<string name="mobile_activation_error_message">An error has occurred while trying to activate this service. Please try again.</string>
	<string name="mobile_activation_serial_already_have">Already have\n%s service?</string>
	<string name="mobile_activation_serial_dont_have">Don\'t have %s service?</string>
	<string name="mobile_activation_title">Activation</string>
	<string name="mobile_add">Add</string>
	<string name="mobile_add_devices_services_title">Choose to add</string>
	<string name="mobile_add_phone_description">Please enter your phone number to receive text messages</string>
	<string name="mobile_add_phone_title">Add Phone Number</string>
	<string name="mobile_add_plus">+ Add</string>
	<string name="mobile_add_service_shop">Learn more</string>
	<string name="mobile_add_to_devices">Add to my devices</string>
	<string name="mobile_agree">I Agree</string>
	<string name="mobile_allianz.smarthome.internal_start_text">Internal Application for Integration testing</string>
	<string name="mobile_allianz.smarthome.internal_start_title">Internal Safe Home</string>
	<string name="mobile_allianz.smarthome_location_notification_text">It looks like you\'re on the go. Your journeys trigger automations to keep you safe.</string>
	<string name="mobile_allianz.smarthome_location_notification_title">Starting a Journey </string>
	<string name="mobile_allianz.smarthome_start_text">The all-in-one smart security solution for your home.\n\nTEL2S and Habit Analytics formed a partnership to give you a new service in order to secure your home. </string>
	<string name="mobile_allianz.smarthome_start_title">Allianz Safe Home</string>
	<string name="mobile_android_notifications_permission_html">&lt;b&gt;Grant access&lt;/b&gt;&lt;br /&gt;&lt;br /&gt; Follow these steps to enable Notifications. You can change this later in your phone\'s settings.&lt;br /&gt;&lt;br /&gt; &amp;nbsp;&lt;b&gt;1.&lt;/b&gt; Open Settings &lt;br /&gt; &amp;nbsp;&lt;b&gt;2.&lt;/b&gt; Select Notifications &lt;br/&gt; &amp;nbsp;&lt;b&gt;3.&lt;/b&gt; Select this application &lt;br/&gt; &amp;nbsp;&lt;b&gt;4.&lt;/b&gt; Switch all options to ON &lt;br/&gt;</string>
	<string name="mobile_android_permission_1_html">&lt;b&gt;Grant access&lt;/b&gt;&lt;br /&gt;&lt;br /&gt; Follow these steps to enable necessary permissions. You can change this later in your phone\'s settings.&lt;br /&gt;&lt;br /&gt; &amp;nbsp;&lt;b&gt;1.&lt;/b&gt; Open Android Settings &lt;br /&gt; &amp;nbsp;&lt;b&gt;2.&lt;/b&gt; Select Apps &lt;br/&gt; &amp;nbsp;&lt;b&gt;3.&lt;/b&gt; Find the App &lt;br/&gt; &amp;nbsp;&lt;b&gt;4.&lt;/b&gt; Tap Permissions &lt;br/&gt;</string>
	<string name="mobile_android_permission_2_html">&lt;b&gt;%1$s.&lt;/b&gt; Turn %2$s ON&lt;br/&gt;</string>
	<string name="mobile_askmelater">Ask me later</string>
	<string name="mobile_background_audio_enabled_no_video">Video option is unavailable when background audio is enabled.</string>
	<string name="mobile_background_audio_loading">Loading background audio...</string>
	<string name="mobile_background_audio_stream_error">Background audio option is currently not available. Please try again later.</string>
	<string name="mobile_blankstate_title">Hey!</string>
	<string name="mobile_blog">Blog</string>
	<string name="mobile_blue">Blue</string>
	<string name="mobile_buffering">Loading recorded video...</string>
	<string name="mobile_buffering_live">Loading live feed...</string>
	<string name="mobile_buildinglink.smarthome_location_notification_text">It looks like you\'re on the go. Your journeys trigger automations to keep you safe.</string>
	<string name="mobile_buildinglink.smarthome_location_notification_title">Starting a Journey </string>
	<string name="mobile_buildinglink.smarthome_start_text">You have a connected product, BL Smarthome can manage it.</string>
	<string name="mobile_buildinglink.smarthome_start_title">The all-in-one smart home assistant.</string>
	<string name="mobile_bundles">Bundles</string>
	<string name="mobile_cancel">Cancel</string>
	<string name="mobile_card_description">Card Description</string>
	<string name="mobile_card_new">You have new cards. Pull to refresh.</string>
	<string name="mobile_cards_blankstate_empty_text">All your cards will be listed here.</string>
	<string name="mobile_cards_blankstate_empty_title">\'A house is a machine for living in.\'</string>
	<string name="mobile_cards_blankstate_loading_text">We\'re loading your cards</string>
	<string name="mobile_cards_loading">Working</string>
	<string name="mobile_cards_location">Set location</string>
	<string name="mobile_cards_product_description_title">Product description</string>
	<string name="mobile_cards_product_shop">Find out more...</string>
	<string name="mobile_celfocus.homemonitor_location_notification_text">It looks like you\'re on the go. Your journeys trigger automations to keep you safe.</string>
	<string name="mobile_celfocus.homemonitor_location_notification_title">Starting a Journey </string>
	<string name="mobile_celfocus.homemonitor_start_text">It\'s great to be nearby.</string>
	<string name="mobile_celfocus.homemonitor_start_title">Vodafone V World</string>
	<string name="mobile_choose_device_vc_first_step">When I detect that...</string>
	<string name="mobile_choose_device_vc_fourth_step">And also...</string>
	<string name="mobile_choose_device_vc_second_step">I\'ll make sure that...</string>
	<string name="mobile_choose_device_vc_third_step">But only if...</string>
	<string name="mobile_choose_library">Choose from library</string>
	<string name="mobile_clear">Clear</string>
	<string name="mobile_clear_cards_confirmation">You\'re about to clear all alert cards.\nAre you sure you want to do this?</string>
	<string name="mobile_confirm_password">Confirm password</string>
	<string name="mobile_contact_us">Contact us</string>
	<string name="mobile_country_code">Country Code</string>
	<string name="mobile_create_group_vc_select_devices_group">Select the devices to be part of the group</string>
	<string name="mobile_create_password">Create password</string>
	<string name="mobile_day">Day</string>
	<string name="mobile_debug_logs">Debug Logs</string>
	<string name="mobile_delete">Delete</string>
	<string name="mobile_device_add">Add device</string>
	<string name="mobile_device_add_location">Add location</string>
	<string name="mobile_device_and_group_delete_text">Deleting this device from the app will also remove a group since you\'ll have less than 2 devices on it.\nAre you sure you want to delete it?</string>
	<string name="mobile_device_auth_error_text">Device not authorized</string>
	<string name="mobile_device_auth_title">Device Authorization</string>
	<string name="mobile_device_blankstate_empty_text">All your devices will be listed here</string>
	<string name="mobile_device_blankstate_empty_title">\'A house is a machine for living in.\'</string>
	<string name="mobile_device_blankstate_loading_text">We\'re loading your devices</string>
	<string name="mobile_device_delete_text">You\'re about to delete this device.\nAre you sure you want to do this?</string>
	<string name="mobile_device_edit">Edit device</string>
	<string name="mobile_device_edit_text">An error has occurred while editing this device. Please try again later.</string>
	<string name="mobile_device_not_found">Devices not found!</string>
	<string name="mobile_device_results_title">Device results</string>
	<string name="mobile_device_search">Search device</string>
	<string name="mobile_device_selection_select_devices">Select the devices to add.</string>
	<string name="mobile_device_update_error">Sorry, there seems to be a problem updating your device.</string>
	<string name="mobile_devices">Devices</string>
	<string name="mobile_devices_select">Select one or more devices</string>
	<string name="mobile_dob">Date of Birth</string>
	<string name="mobile_done">Done</string>
	<string name="mobile_dont_have_account">Don\'t have an account yet?</string>
	<string name="mobile_dontshowthis">Don\'t show suggestions about this</string>
	<string name="mobile_edit_photo_text">You can pinch In or Out to rescale picture.</string>
	<string name="mobile_edit_photo_title">Edit photo</string>
	<string name="mobile_email">Email</string>
	<string name="mobile_email_invalid">Invalid Email</string>
	<string name="mobile_email_notifications_text">By disabling Email Notifications you won\'t receive important notifications, including security alerts.</string>
	<string name="mobile_engie.smarthome_start_text">No more 100 apps to control 100 devices. All your favourite brands in one place.</string>
	<string name="mobile_engie.smarthome_start_title">One app for your connected devices</string>
	<string name="mobile_error_code_5000">You had already subscribed to the service.</string>
	<string name="mobile_error_max_users">Your camera as reached the maximum number of connections to the microphone.</string>
	<string name="mobile_error_text">We\'re sorry but something went wrong. Please try again.</string>
	<string name="mobile_error_title">Something went wrong</string>
	<string name="mobile_facebook">Facebook</string>
	<string name="mobile_facebook_login_error_text">Operation could not be completed.</string>
	<string name="mobile_facebook_login_failed_title">Facebook Sign In attempt failed</string>
	<string name="mobile_facebook_login_permission_text">Facebook email permission not granted.</string>
	<string name="mobile_fail">Failure</string>
	<string name="mobile_faq">FAQ</string>
	<string name="mobile_feedback_hint">Please share your comments with us!</string>
	<string name="mobile_feedback_option1">The app works according to my needs</string>
	<string name="mobile_feedback_option2">Some features are not working</string>
	<string name="mobile_feedback_option3">The app is not very intuitive</string>
	<string name="mobile_feedback_option4">The app needs more features/devices</string>
	<string name="mobile_feedback_success_text">We are always improving and having cool ideas to improve the app, and your opinion helps us get there.</string>
	<string name="mobile_feedback_success_title">Thank you for your feedback!</string>
	<string name="mobile_feedback_text">Your feedback is important to us. Please let us know what you think about our app.</string>
	<string name="mobile_next">Next</string>
	<string name="mobile_or">Or</string>
	<string name="mobile_password">Password</string>
	<string name="mobile_red">Red</string>
	<string name="mobile_reset_pass">Reset Password</string>
	<string name="mobile_reset_pass_description">If you want to reset your password, we will send you an email.</string>
	<string name="mobile_save">Save</string>
	<string name="mobile_send">Send</string>
	<string name="mobile_send_color_instructions">If you don\'t see any color click here</string>
	<string name="mobile_service_color_selection_text">To finish the lights setup, please confirm the current color of the light in your baby\'s room.</string>
	<string name="mobile_settings_notifications_email">Email</string>
	<string name="mobile_signup">Create account</string>
	<string name="mobile_take_photo">Take Photo</string>
	<string name="mobile_username">Name</string>
</resources>