<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper
    android:id="@+id/view_flipper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <RelativeLayout android:id="@+id/placeholder_feedback_container"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray_lighter"
                    android:orientation="vertical">

        <TextView
            android:id="@+id/placeholder_thoughts_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="21dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/mobile_feedback_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"/>

        <CheckedTextView
            style="@style/feedback"
            android:id="@+id/checked_thoughts_first_option"
            android:layout_below="@+id/placeholder_thoughts_label"
            android:layout_marginTop="16dp"
            android:text="@string/mobile_feedback_option1"/>

        <CheckedTextView
            style="@style/feedback"
            android:id="@+id/checked_thoughts_second_option"
            android:layout_below="@+id/checked_thoughts_first_option"
            android:text="@string/mobile_feedback_option2"/>

        <CheckedTextView
            style="@style/feedback"
            android:id="@+id/checked_thoughts_third_option"
            android:layout_below="@+id/checked_thoughts_second_option"
            android:text="@string/mobile_feedback_option3"/>

        <CheckedTextView
            style="@style/feedback"
            android:id="@+id/checked_thoughts_fourth_option"
            android:layout_below="@+id/checked_thoughts_third_option"
            android:text="@string/mobile_feedback_option4"/>

        <EditText
            android:id="@+id/placeholder_thoughts_edit"
            android:layout_width="@dimen/button_blank_state_width"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_feedback_submit"
            android:layout_below="@+id/checked_thoughts_fourth_option"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:gravity="start"
            android:hint="@string/mobile_feedback_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:lines="6"
            android:maxLines="2000"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="@dimen/user_feedback_font_size"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btn_feedback_submit"
            style="@style/ButtonFooter"
            android:layout_width="@dimen/button_blank_state_width"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/mobile_send"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/placeholder_thank_you_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"

        >

        <TextView
            android:id="@+id/placeholder_thank_you_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:lines="1"
            android:text="@string/mobile_feedback_success_title"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="normal"
            />

        <TextView
            android:id="@+id/placeholder_thank_you_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/placeholder_thank_you_label"
            android:layout_centerInParent="true"
            android:layout_marginLeft="95dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:lines="4"
            android:text="@string/mobile_feedback_success_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            />

        <Button
            android:id="@+id/button_done"
            style="@style/ButtonFooter"
            android:layout_width="@dimen/button_blank_state_width"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/mobile_done"/>
    </RelativeLayout>


</ViewFlipper>


