<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mobile_reset_pass"
            android:textColor="@color/blackish"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/mobile_reset_pass_description"
            android:textSize="17sp"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_settings_notifications_email"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:textColor="@color/blackish"
            android:textSize="14sp"/>


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_button_footer"
            android:enabled="false"
            android:text="@string/mobile_reset_pass"
            android:textAllCaps="false"
            android:textColor="@color/white"/>


    </LinearLayout>
</ScrollView>