<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:id="@+id/placeholder_logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/about_logo"/>

    <TextView
        android:id="@+id/placeholder_version_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lines="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:text="2.7.0"/>

    <TextView
        android:id="@+id/placeholder_copyright_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        tools:text="@string/mobile_about_copyright"/>

    <TextView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lines="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/mobile_about_website"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/placeholder_read_more_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/mobile_about_privacy"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/placeholder_terms_conditions_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lines="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/mobile_about_tc"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/placeholder_privacy_policy_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lines="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/mobile_about_pp"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="normal"/>

</LinearLayout>

