<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/mobile_signup"
            android:textColor="@color/blackish"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_username"
            android:inputType="textPersonName"
            android:layout_margin="10dp"
            android:textColor="@color/blackish"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_settings_notifications_email"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:textColor="@color/blackish"
            android:textSize="14sp"/>

        <!--<FrameLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->
            <!--<EditText-->
                <!--android:id="@+id/password"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/mobile_password"-->
                <!--android:inputType="textPassword"-->
                <!--android:padding="20dp"-->
                <!--android:textColor="@color/blackish"-->
                <!--android:textSize="14sp"/>-->
            <!--<CheckBox-->

                <!--android:layout_gravity="center_vertical|end"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"/>-->

        <!--</FrameLayout>-->
        <com.muzzley.util.ui.PasswordEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_password"
            android:inputType="textPassword"
            android:drawableRight="@drawable/icon_edit_group_gray"
            android:textColor="@color/blackish"
            android:layout_margin="10dp"
            android:textSize="14sp"/>
        <!--android:layout_margin="20dp"-->

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_button_footer"
            android:enabled="false"
            android:text="@string/mobile_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <include layout="@layout/social_login"/>


    </LinearLayout>
</ScrollView>